Move hbase-compat modules